# soc_roman_tools

./: .gitignore  LICENSE  README.md  bandit.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  publish-to-pypi.yml
notebooks/: README.md  requirements.txt  retrieve_data.sh  roman_pandeia.ipynb
notebooks/pandeia_docs/: README.rst  pandeia_install.py  requirements.txt.html
notebooks/pandeia_docs/docs/source/: conf.py  functions.rst  help.rst  index.rst  installation.rst  tutorial.rst
src/soc_roman_tools/: __init__.py
src/soc_roman_tools/pixel_area/: pixel_area_map.py
src/soc_roman_tools/siaf/: siaf.py
src/soc_roman_tools/utilities/: logging_functions.py  matrix.py  pandeia_notebook.py
tests/: test_pixel_area.py  test_siaf.py
