[metadata]
name = soc_roman_tools
author = STScI
author_email = help@stsci.edu
description = Tools and examples for the Roman WFI developed by the Roman Science Operations Center.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spacetelescope/soc_roman_tools
project_urls =
    Source Code = https://github.com/spacetelescope/soc_roman_tools
license = BSD-3-Clause
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3


[options]
package_dir =
    =src
packages = find:
zip_safe = False
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    roman_datamodels
    pysiaf

[options.package_data]
soc_roman_tools.resources = data/*.xml

[options.packages.find]
where = src
